--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -150,7 +150,7 @@
                         <a href="index.html"><i class="fa fa-fw fa-dashboard"></i> Overview</a>
                     </li>
                     <li>
-                        <a href="charts.html"><i class="fa fa-fw fa-bar-chart-o"></i> Leads</a>
+                        <a href="leads"><i class="fa fa-fw fa-bar-chart-o"></i> Leads</a>
                     </li>
                     <li>
                         <a href="tables.html"><i class="fa fa-fw fa-table"></i> Tables</a>
