add in show page for leads

--- a/app/assets/javascripts/templates/leads/lead.hbs
+++ b/app/assets/javascripts/templates/leads/lead.hbs
@@ -1,3 +1,8 @@
-<span class="badge">{{status}}</span>
-<i class="fa fa-fw fa-calendar"></i> {{title}}
-
+<span data-role="link" data-url="leads/{{id}}" style="display: none;">
+    <td>{{title}}</td>
+    <td>email</td>
+    <td>phone</td>
+    <td>name</td>
+    <td><span class="label label-success">{{status}}</span></td>
+    <td>account value</td>
+</span>
