add in lead show page with styling

--- a/app/assets/javascripts/templates/leads/show.hbs
+++ b/app/assets/javascripts/templates/leads/show.hbs
@@ -46,14 +46,14 @@
 
                 <div class="row">
                     <h1 class="task-header">
-                        <small>Opportunties<a href="#"><span class="right glyphicon glyphicon-plus" aria-hidden="true"></span></small></a>
+                        <small>Opportunities<a href="#"><span class="right glyphicon glyphicon-plus" aria-hidden="true"></span></small></a>
                     </h1>
                     <hr>
 
                         <div class="panel panel-default opportunity-panel">
 
                           <div class="panel-heading">
-                            <h3 class="panel-title"><span class="opportunity-label label label-success">$20,000</span> Ben Cochrane <span class="badge">Active</span>
+                            <h3 class="panel-title"><span class="opportunity-label label label-success">$20,000</span> John Salesguy <span class="badge">Active</span>
                             <a data-toggle="tooltip" data-placement="top" title="Edit this opportunity" class="right edit-opportunity"><span class="right glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
                             </h3>
                             
@@ -69,18 +69,185 @@
 
 
 
+                <div class="row">
+                    <h1 class="task-header">
+                        <small>Contacts<a href="#"><span class="right glyphicon glyphicon-plus" aria-hidden="true"></span></small></a>
+                    </h1>
+                    <hr>
+
+                        <div class="panel panel-default contact-panel">
+                          <div class="panel-heading">
+                            <h3 class="panel-title"> Ben Cochrane <span class="badge">Web Developer</span>
+                            <a data-toggle="tooltip" data-placement="top" title="Edit this opportunity" class="right edit-opportunity"><span class="right glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
+                            <a href="tel:0439748871"><span class="right contact-glyphicon glyphicon glyphicon-earphone" aria-hidden="true"></span></a>
+                            <a href="mailto:bochrane@gmail.com" target="_blank"><span class="right contact-glyphicon glyphicon glyphicon-envelope" aria-hidden="true"></span></a>
+                            </h3>
+                          </div>
+                        </div>  
 
 
+                        <div class="panel panel-default contact-panel">
+                          <div class="panel-heading">
+                            <h3 class="panel-title"> Anna Cochrane <span class="badge">State Manager</span>
+                            <a data-toggle="tooltip" data-placement="top" title="Edit this opportunity" class="right edit-opportunity"><span class="right glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
+                            <a href="tel:0439748871"><span class="right contact-glyphicon glyphicon glyphicon-earphone" aria-hidden="true"></span></a>
+                            <a href="mailto:bochrane@gmail.com" target="_blank"><span class="right contact-glyphicon glyphicon glyphicon-envelope" aria-hidden="true"></span></a>
+                            </h3>
+                          </div>
+                        </div>  
+                
+                </div>
+
+                <div class="row">
+                    <h3><small><a href="#"><span class="glyphicon glyphicon-transfer" aria-hidden="true"></span> Merge Lead</small></a></h3>
+                    <h3><small><a href="#"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span> Delete Lead</small></a></h3>
+                </div>
             </div>
+
             <div class="col-lg-8">
-                <h1 class="page-header">
-                    Dashboard <small>Statistics Overview</small>
-                </h1>
-                <ol class="breadcrumb">
-                    <li class="active">
-                        <i class="fa fa-dashboard"></i> Dashboard
-                    </li>
-                </ol>
+
+                <div class="row">
+
+                    <div class="col-md-6">
+                        <div class="page-header btn-group btn-group-justified" role="group" aria-label="...">
+                            <div class="btn-group" role="group">
+                            <button type="button" class="btn btn-default timeline-input-select"><h4><span class="glyphicon glyphicon-comment" aria-hidden="true"></span> Note</h4></button>
+                            </div>
+                            <div class="btn-group" role="group">
+                            <button type="button" class="btn btn-default timeline-input-select"><h4><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> Email</h4></button>
+                            </div>
+                            <div class="btn-group" role="group">
+                            <button type="button" class="btn btn-default timeline-input-select"><h4><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span> Call</h4></button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6">
+                        <div class="page-header status-select">
+                            
+                            <select class="page-header right form-control">
+                            
+                              <option>Status</option>
+                              <option>Cold</option>
+                              <option>Warm</option>
+                              <option>Hot</option>
+                            
+                            </select>                        
+                            
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+
+                    <div class="col-md-6 timeline-sort">
+
+                        <div class="page-header status-select">
+
+                            <ul class="nav nav-pills">
+                              <li role="presentation" class="active"><a href="#">All</a></li>
+                              <li role="presentation"><a href="#">Notes</a></li>
+                              <li role="presentation"><a href="#">Emails</a></li>
+                              <li role="presentation"><a href="#">Calls</a></li>
+                            </ul>
+                                
+                        </div>
+                    </div>
+
+                </div>
+
+
+                <div class="row timeline-row">
+
+                    <div class="col-md-1">
+                        <h4><span class="glyphicon glyphicon-earphone timeline-icon" aria-hidden="true"></span></h4>
+                    </div>
+                    
+                    <div class="col-md-11 right">
+                        <div class="panel panel-default timeline-content">
+                          <div class="panel-heading timeline-title">
+                          Ben didn't pick up - will try call again tomorrow. 
+                          <img class="img-rounded timeline-profile-image right" src="//s27.postimg.org/kdkocn3gj/bencochrane_bio.png">
+                          <span class="right salesperson-first-name">Ben</span>
+                          </div>
+                          <div class="panel-body">
+                            Called Ben Cochrane <span class="days-ago">5 days ago</span><a href="#"><span class="edit"> edit </span></a>
+                          </div>
+                        </div>
+                    </div>
+
+                </div>
+
+
+                <div class="row timeline-row">
+
+                    <div class="col-md-1">
+                        <h4><span class="glyphicon glyphicon-comment timeline-icon" aria-hidden="true"></span></h4>
+                    </div>
+                    
+                    <div class="col-md-11 right">
+                        <div class="panel panel-default timeline-content">
+                          <div class="panel-heading timeline-title">
+                          Chatted with Ben - he likes what the product can do, he is going to finance to see if it's in budget and asked me to call him the next day. 
+                          <img class="img-rounded timeline-profile-image right" src="//s27.postimg.org/kdkocn3gj/bencochrane_bio.png">
+                          <span class="right salesperson-first-name">Ben</span>
+                          </div>
+                          <div class="panel-body">
+                            Note written <span class="days-ago">6 days ago</span><a href="#"><span class="edit"> edit </span></a>
+                          </div>
+                        </div>
+                    </div>
+
+                </div>
+
+
+
+                <div class="row timeline-row">
+
+                    <div class="col-md-1">
+                        <h4><span class="glyphicon glyphicon-envelope timeline-icon" aria-hidden="true"></span></h4>
+                    </div>
+                    
+                    <div class="col-md-11 right">
+                        <div class="panel panel-default timeline-content">
+                          <div class="panel-heading timeline-title">
+                          DuPont investor presentation
+                          <img class="img-rounded timeline-profile-image right" src="//s27.postimg.org/kdkocn3gj/bencochrane_bio.png">
+                          <span class="right salesperson-first-name">Ben</span>
+                          </div>
+                          <div class="panel-body">
+                            <span class="glyphicon glyphicon-play"></span>
+                            <span class="email-timeline-name">From: John Salesman To: Ben Cochrane </span><span class="days-ago right">1 week ago</span><br><br>
+                            <p>
+                                Hi! My name is Steli and I'm a co-founder of Close.io. I'm here to get your team set up and help with anything you may need as you evaluate our platform. Please don't hesitate to reach out with any questions! Test sending an email within Close.io right now! Click on the reply arrow, drop me a note, and check off that task on the left. If you don't know what to say, use a sample email template we prepared for you. If you want to learn more about Close.io, read through the notes below this message. They contain actionable steps that will help you quickly get value out of Close.io. Cheers, Steli                                
+                            </p>
+                          </div>
+                        </div>
+                    </div>
+
+                </div>
+
+
+                <div class="row timeline-row">
+
+                    <div class="col-md-1">
+                        <h4><span class="glyphicon glyphicon-log-in timeline-icon" aria-hidden="true"></span></h4>
+                    </div>
+                    
+                    <div class="col-md-11 right">
+                        <div class="panel panel-default timeline-content">
+                          <div class="panel-heading timeline-title">
+                          Lead created <span class="days-ago">2 weeks ago</span> 
+                          <img class="img-rounded timeline-profile-image right" src="//s27.postimg.org/kdkocn3gj/bencochrane_bio.png">
+                          <span class="right salesperson-first-name">Ben</span>
+                          </div>
+                        </div>
+                    </div>
+
+                </div>                
+
+
+
             </div>            
         </div>
     </div>
