--- a/app/assets/javascripts/templates/dashboard/app.hbs
+++ b/app/assets/javascripts/templates/dashboard/app.hbs
@@ -3,30 +3,15 @@
 
     <div class="container-fluid">
 
-        <!-- Page Heading -->
+        
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">
-                    Dashboard <small>Statistics Overview</small>
+                    Dashboard
                 </h1>
-                <ol class="breadcrumb">
-                    <li class="active">
-                        <i class="fa fa-dashboard"></i> Dashboard
-                    </li>
-                </ol>
             </div>
         </div>
-        <!-- /.row -->
 
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="alert alert-info alert-dismissable">
-                    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-                    <i class="fa fa-info-circle"></i>  <strong>Like SB Admin?</strong> Try out <a href="http://startbootstrap.com/template-overviews/sb-admin-2" class="alert-link">SB Admin 2</a> for additional features!
-                </div>
-            </div>
-        </div>
-        <!-- /.row -->
 
         <div class="row">
             <div class="col-lg-3 col-md-6">
