--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,13 +9,13 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
-
+    <link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
 
 
-    <title>SalePal</title>
+    <title>SalesPal</title>
 
 
 
@@ -50,7 +50,7 @@
 
                 <form class="form-inline">
                   <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Search Leads">
+                    <input type="text" class="form-control search-bar" placeholder="Search Leads">
                   </div>
                 </form>
 
@@ -160,7 +160,12 @@
             </ul>
             <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
+
                 <ul class="nav navbar-nav side-nav">
+                    <li>
+                        <a class="company-logo" href="dashboard"><i class="fa fa-fw fa-dashboard"></i></a><br>
+                        <h3 class="company-heading">Boch Inc</h3>
+                    </li>
                     <li>
                         <a href="dashboard"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
                     </li>
@@ -173,28 +178,20 @@
                     <li>
                         <a href="reporting"><i class="fa fa-fw fa-edit"></i> Reporting</a>
                     </li>
+                    
                     <li>
-                        <a href="smart-views"><i class="fa fa-fw fa-desktop"></i> Smart Views</a>
-                    </li>
-                    <li>
-                        <a href="bootstrap-grid.html"><i class="fa fa-fw fa-wrench"></i> Bootstrap Grid</a>
-                    </li>
-                    <li>
-                        <a href="javascript:;" data-toggle="collapse" data-target="#demo"><i class="fa fa-fw fa-arrows-v"></i> Dropdown <i class="fa fa-fw fa-caret-down"></i></a>
+                        <a data-toggle="collapse" data-target="#demo"><i class="fa fa-fw fa-arrows-v"><span class="smart-views-plus-icon glyphicon glyphicon-play"></span></i> Smart Views <i class="fa fa-fw fa-caret-down"></i></a>
                         <ul id="demo" class="collapse">
                             <li>
-                                <a href="#">Dropdown Item</a>
+                                <a href="#">Metro Sydney</a>
                             </li>
                             <li>
-                                <a href="#">Dropdown Item</a>
+                                <a href="#">Metro Melbourne</a>
+                            </li>
+                            <li>
+                                <a href="#">Metro Brisbane</a>
                             </li>
                         </ul>
-                    </li>
-                    <li>
-                        <a href="blank-page.html"><i class="fa fa-fw fa-file"></i> Blank Page</a>
-                    </li>
-                    <li>
-                        <a href="index-rtl.html"><i class="fa fa-fw fa-dashboard"></i> RTL Dashboard</a>
                     </li>
                 </ul>
             </div>
@@ -206,11 +203,8 @@
 
     </div>
 
-
-
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.2/js/bootstrap.min.js"></script>
-
 <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.2/backbone-min.js"></script>
 <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
