--- a/app/assets/stylesheets/z-custom.css
+++ b/app/assets/stylesheets/z-custom.css
@@ -261,7 +261,7 @@ body, .nav.navbar-nav.side-nav, #wrapper {
     left: 4em;
 }
 
-..label-success {
+.label-success {
     background-color: #57bb89 !important;
 }
 
