--- a/app/assets/javascripts/templates/leads/show.hbs
+++ b/app/assets/javascripts/templates/leads/show.hbs
@@ -167,7 +167,7 @@
                         <div class="panel panel-default timeline-content">
                           <div class="panel-heading timeline-title">
                           Ben didn't pick up - will try call again tomorrow. 
-                          <img class="img-rounded timeline-profile-image right" src="//s27.postimg.org/kdkocn3gj/bencochrane_bio.png">
+                          <img class="img-rounded timeline-profile-image right" src="http://s27.postimg.org/kdkocn3gj/bencochrane_bio.png">
                           <span class="right salesperson-first-name">Ben</span>
                           </div>
                           <div class="panel-body">
@@ -189,7 +189,7 @@
                         <div class="panel panel-default timeline-content">
                           <div class="panel-heading timeline-title">
                           Chatted with Ben - he likes what the product can do, he is going to finance to see if it's in budget and asked me to call him the next day. 
-                          <img class="img-rounded timeline-profile-image right" src="//s27.postimg.org/kdkocn3gj/bencochrane_bio.png">
+                          <img class="img-rounded timeline-profile-image right" src="http://s27.postimg.org/kdkocn3gj/bencochrane_bio.png">
                           <span class="right salesperson-first-name">Ben</span>
                           </div>
                           <div class="panel-body">
@@ -212,7 +212,7 @@
                         <div class="panel panel-default timeline-content">
                           <div class="panel-heading timeline-title">
                           DuPont investor presentation
-                          <img class="img-rounded timeline-profile-image right" src="//s27.postimg.org/kdkocn3gj/bencochrane_bio.png">
+                          <img class="img-rounded timeline-profile-image right" src="http://s27.postimg.org/kdkocn3gj/bencochrane_bio.png">
                           <span class="right salesperson-first-name">Ben</span>
                           </div>
                           <div class="panel-body">
@@ -238,7 +238,7 @@
                         <div class="panel panel-default timeline-content">
                           <div class="panel-heading timeline-title">
                           Lead created <span class="days-ago">2 weeks ago</span> 
-                          <img class="img-rounded timeline-profile-image right" src="//s27.postimg.org/kdkocn3gj/bencochrane_bio.png">
+                          <img class="img-rounded timeline-profile-image right" src="http://s27.postimg.org/kdkocn3gj/bencochrane_bio.png">
                           <span class="right salesperson-first-name">Ben</span>
                           </div>
                         </div>
