--- a/app/assets/javascripts/templates/leads/show.hbs
+++ b/app/assets/javascripts/templates/leads/show.hbs
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-lg-4">
                 <div class="row">
-                    <h1 class="page-header">
+                    <h1 class="page-header lead-title lead-title-save">
                         {{title}}<br> <a href="#"><small>Edit</small></a>
                     </h1>
                 </div>
