add in new lead modal and delete lead functionality

--- a/app/assets/javascripts/templates/leads/show.hbs
+++ b/app/assets/javascripts/templates/leads/show.hbs
@@ -99,8 +99,8 @@
                 </div>
 
                 <div class="row">
-                    <h3><small><a href="#"><span class="glyphicon glyphicon-transfer" aria-hidden="true"></span> Merge Lead</small></a></h3>
-                    <h3><small><a href="#"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span> Delete Lead</small></a></h3>
+                    <h3><small class="merge-lead"><span class="glyphicon glyphicon-transfer" aria-hidden="true"></span> Merge Lead</small></h3>
+                    <h3><small class="delete-lead"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span> Delete Lead</small></h3>
                 </div>
             </div>
 
@@ -108,7 +108,7 @@
 
                 <div class="row">
 
-                    <div class="col-md-6">
+                    <div class="col-md-6 timeline-options">
                         <div class="page-header btn-group btn-group-justified" role="group" aria-label="...">
                             <div class="btn-group" role="group">
                             <button type="button" class="btn btn-default timeline-input-select"><h4><span class="glyphicon glyphicon-comment" aria-hidden="true"></span> Note</h4></button>
@@ -122,7 +122,7 @@
                         </div>
                     </div>
 
-                    <div class="col-md-6">
+                    <div class="col-md-5">
                         <div class="page-header status-select">
                             
                             <select class="page-header right form-control">
