add in models and controllers for notes, contacts and tasks

--- a/app/assets/javascripts/templates/leads/app.hbs
+++ b/app/assets/javascripts/templates/leads/app.hbs
@@ -11,7 +11,15 @@
                     <button type="button" class="btn btn-default new-lead" data-toggle="modal" data-target="#exampleModal" data-whatever="@mdo" ><span class="glyphicon glyphicon-plus"></span> New Lead</button>
 
 
-                    <small class="right">Upload New Leads</small>
+                    <form class="form-inline inline">
+                      <div class="form-group">
+
+                        <input type="text" class="form-control search-bar" placeholder="Search Leads">
+                      </div>
+                    </form>
+
+
+                    <small class="right inline">Upload New Leads</small>
                 </h1>
 
 
