--- a/app/assets/javascripts/templates/leads/app.hbs
+++ b/app/assets/javascripts/templates/leads/app.hbs
@@ -11,15 +11,15 @@
                     <button type="button" class="btn btn-default new-lead" data-toggle="modal" data-target="#exampleModal" data-whatever="@mdo" ><span class="glyphicon glyphicon-plus"></span> New Lead</button>
 
 
-                    <form class="form-inline inline">
+ {{!--                    <form class="form-inline inline">
                       <div class="form-group">
 
                         <input type="text" class="form-control search-bar" placeholder="Search Leads">
                       </div>
-                    </form>
+                    </form> --}}
 
 
-                    <small class="right inline">Upload New Leads</small>
+                    <small class="right">Upload New Leads</small>
                 </h1>
 
 
@@ -86,10 +86,10 @@
             <h4 class="modal-title" id="exampleModalLabel">Add a New Lead</h4>
           </div>
           <div class="modal-body">
-            <form>
+            <form class="create-new-lead">
               <div class="form-group">
                 <label for="recipient-name" class="control-label">Lead Name / Company:</label>
-                <input type="text" class="form-control" id="recipient-name">
+                <input type="text" class="form-control new-lead-input" id="recipient-name">
               </div>
             </form>
           </div>
