--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,11 +30,9 @@
 
 <body>
 
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-
     <div id="wrapper">
-
+<!--     <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p> -->
         
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         
