--- a/app/assets/javascripts/templates/leads/show.hbs
+++ b/app/assets/javascripts/templates/leads/show.hbs
@@ -50,9 +50,11 @@
                     </h1>
                     <hr>
 
-                        <div class="panel panel-default opportunity-panel">
+                      <div class="opportunity-panel-holder">
 
-                          <div class="panel-heading">
+                        {{!-- <div class="panel panel-default opportunity-panel"> --}}
+
+{{!--                           <div class="panel-heading">
                             <h3 class="panel-title"><span class="opportunity-label label label-success">$20,000</span> John Salesguy <span class="badge">Active</span>
                             <a data-toggle="tooltip" data-placement="top" title="Edit this opportunity" class="right edit-opportunity"><span class="right glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
                             </h3>
@@ -61,10 +63,11 @@
 
                           <div class="panel-body">
                             Great client, call him Boch.
-                          </div>
+                          </div> --}}
 
-                        </div>                    
-                
+                        {{!-- </div>                     --}}
+                        
+                      </div>
                 </div>
 
 
