add in user model for google oauth

--- a/app/views/layouts/landingpage.html.erb
+++ b/app/views/layouts/landingpage.html.erb
@@ -1,1 +1,19 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Document</title>
+</head>
+<body>
+    
 Landing Page
+
+    <% if current_user %>
+        Signed in as <%= current_user.full_name %>
+        <%= link_to "Sign out", signout_path %>
+    <% else %>
+        <%= link_to "Signin with Google", 'auth/google_oauth2' %>
+    <% end %>
+
+</body>
+</html>
